// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboButton renders a combo button with children and an overflow menu 1`] = `
<div
  class="security--combo-button"
  data-floating-menu-container="true"
>
  <button
    class="security--button some-class security--combo-button--primary bx--btn bx--btn--primary"
    tabindex="0"
    type="button"
  >
    <span
      class="bx--text-truncate--end"
      title="Start a task"
    >
      Start a task
    </span>
    <svg
      aria-hidden="true"
      aria-label=""
      class="bx--btn__icon"
      focusable="false"
      height="20"
      preserveAspectRatio="xMidYMid meet"
      style="will-change:transform"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.8 2.8l-1 1 5.4 5.5H1v1.4h15.2l-5.4 5.5 1 1L19 10z"
      />
    </svg>
  </button>
  <div
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="Menu"
    class="security--button bx--btn bx--btn--primary security--combo-button__button security--combo-button__overflow-menu bx--overflow-menu"
    role="button"
    tabindex="0"
  >
    <svg
      aria-label="open and close list of options"
      class="bx--overflow-menu__icon"
      focusable="false"
      height="16"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      style="will-change:transform"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
      />
      <title>
        open and close list of options
      </title>
    </svg>
  </div>
</div>
`;

exports[`ComboButton renders a combo button without an overflow menu 1`] = `
<div
  class="security--combo-button"
  data-floating-menu-container="true"
>
  <button
    class="security--button some-class security--combo-button--primary bx--btn bx--btn--primary"
    tabindex="0"
    type="button"
  >
    <span
      class="bx--text-truncate--end"
      title="Start a task"
    >
      Start a task
    </span>
    <svg
      aria-hidden="true"
      aria-label=""
      class="bx--btn__icon"
      focusable="false"
      height="20"
      preserveAspectRatio="xMidYMid meet"
      style="will-change:transform"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.8 2.8l-1 1 5.4 5.5H1v1.4h15.2l-5.4 5.5 1 1L19 10z"
      />
    </svg>
  </button>
</div>
`;
